<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity2">


    <LinearLayout
        android:id="@+id/linearcima"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="74dp"
            android:layout_height="94dp"
            android:layout_margin="10dp"
            app:srcCompat="@drawable/perfil"
            tools:layout_editor_absoluteX="2dp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linearcima"
        android:layout_marginBottom="80dp">

        <LinearLayout
            android:id="@+id/linearmeio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"

                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/txtmapa"
                android:textSize="25sp" />

            <ImageButton
                android:id="@+id/btnmapa"
                android:layout_width="198dp"
                android:layout_height="186dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="50dp"
                android:background="@color/white"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/mapa" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="left"
                android:text="@string/txtquemsomos"
                android:textSize="25sp" />

            <ImageButton
                android:id="@+id/btnQuemSomos"
                android:layout_width="203dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/quem" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="266dp"
                android:layout_margin="10dp"

                app:srcCompat="@drawable/quem" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="314dp"
                android:layout_margin="10dp"
                android:layout_marginBottom="76dp"
                android:text="@string/quemsomos"
                android:textSize="22dp"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#61993b"
            android:text="@string/volta" />
    </LinearLayout>


</RelativeLayout>